--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alan Jhonnes <alanjhonnes@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "ts-toolbelt": "^9.6.0"
+    "ts-toolbelt": "^9.6.0",
+    "typescript": "^4.4.4"
   }
 }
